--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,32 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chore Tracker Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <script src="{{ url_for('static', filename='js/dashboard.js') }}" defer></script>
 </head>
 <body class="bg-light">
-    <nav class="navbar navbar-expand-lg bg-white shadow-sm rounded-bottom">
+    <nav class="navbar navbar-expand bg-white shadow-sm rounded-bottom">
         <div class="container-md">
-            <a class="navbar-brand text-success" href="{{ url_for('dashboard') }}">Home</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link btn btn-success text-white rounded me-2" href="{{ url_for('wallet') }}">Wallet</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link btn btn-success text-white rounded dropdown-toggle" href="#" id="accountDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Account
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-end rounded" aria-labelledby="accountDropdown">
-                            <li><a class="dropdown-item" href="{{ url_for('change_password') }}">Change Password</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
+            <a class="navbar-brand btn btn-success text-white rounded" href="{{ url_for('dashboard') }}">Home</a>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link text-success" href="#" id="accountDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="bi bi-person-circle fs-4"></i>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end rounded" aria-labelledby="accountDropdown">
+                        <li><a class="dropdown-item" href="{{ url_for('change_password') }}">Change Password</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('wallet') }}">Wallet</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a></li>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </nav>
     <div class="container-md mt-5">
